# calculadora_riego_trading

./: .gitignore  CHANGELOG.md  README.md  app.js  index.html  package-lock.json  package.json  playwright.config.js  risk-core.js  styles.css
.github/workflows/: contract-parity-ci.yml  deploy-pages.yml
cli/: trade-plan.js
cpp/: CMakeLists.txt  main.cpp  risk_case_runner.cpp  risk_engine.cpp  risk_engine.h  trade_plan_runner.cpp
docs/: portfolio-final-checklist.md  pretrade-workbench-roadmap.md  quantlab-handoff-contract.md
examples/: quantlab_handoff_request.json
scripts/: clean-local-artifacts.js  serve-static.js
tests/: risk_cases.csv  run_cli_tests.js  run_contract_fixture_tests.js  run_cross_tests.js  run_js_tests.js  run_trade_plan_cross_tests.js
tests/fixtures/: expected_quantlab_handoff.json  expected_trade_plan.csv  expected_trade_plan.json
tests/ui/: risk-calculator.spec.js
web/: backtest-ui.js  main.js  risk-ui.js  shared.js
